# libMatrix

./: .gitignore  CMakeLists.txt  README.md
.vimprj/: settings.vim
src/: Matrix.cpp  Matrix.h
src/matrix/: Matrix.cpp  Matrix.h
test/: CMakeLists.txt  main.cpp  matrix_tests.cpp  matrix_tests.h
